Bug 264931 - [WebM] MediaPlayerPrivateWebM can never enter in error state
Summary: [WebM] MediaPlayerPrivateWebM can never enter in error state
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jean-Yves Avenard [:jya]
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-11-16 01:42 PST by Jean-Yves Avenard [:jya]
Modified: 2023-11-18 04:29 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Yves Avenard [:jya] 2023-11-16 01:42:17 PST
The SourceBufferParserWebM that the MediaPlayerPrivateWebM is using can detect errors.

However, the boolean it sets when an error occurs is never read:
https://searchfox.org/wubkat/rev/7753b1fdea4b4605b4851dec61966b8b7247302a/Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm#1083-1088

And so when playback fails, nothing happen and all you get is a black screen.
Comment 1 Radar WebKit Bug Importer 2023-11-16 01:42:38 PST
<rdar://problem/118499989>
Comment 2 Jean-Yves Avenard [:jya] 2023-11-17 00:59:18 PST
Pull request: https://github.com/WebKit/WebKit/pull/20655
Comment 3 EWS 2023-11-18 04:29:08 PST
Committed 270938@main (15b788c586a8): <https://commits.webkit.org/270938@main>

Reviewed commits have been landed. Closing PR #20655 and removing active labels.