[WebM] MediaPlayerPrivateWebM can never enter in error state https://bugs.webkit.org/show_bug.cgi?id=264931 rdar://118499989

Reviewed by Youenn Fablet.

Parser return value wasn't read, therefore we couldn't detect errors.

* LayoutTests/media/content/opus_variable_witherror.webm: Added.
* LayoutTests/media/media-webm-opus-error-expected.txt: Added.
* LayoutTests/media/media-webm-opus-error.html: Added.
* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.h:
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:
(WebCore::MediaPlayerPrivateWebM::appendCompleted):
(WebCore::MediaPlayerPrivateWebM::append):

Canonical link: https://commits.webkit.org/270938@main